syntax = "proto2";

package alluxio.proto.layout;

// The protobuf that includes file-level metadata information. Use fixed type here to avoid
// unpredictable size with protobuf varint.
message FileMetadata {
    optional fixed64 block_header_size = 1;   // in bytes
    optional fixed64 block_footer_size = 2;   // in bytes
    optional fixed64 chunk_header_size = 3;   // in bytes
    optional fixed64 chunk_size = 4;          // in bytes
    optional fixed64 chunk_footer_size = 5;   // in bytes
    optional fixed64 physical_block_size = 6; // in bytes
    optional fixed64 encryption_id = 7;
}
